--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^1.3.0
-
+  auto_size_text: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
