--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,9 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 29
+    defaultConfig{
+        compileSdkVersion 29
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
