--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   sqflite: ^1.3.0
   auto_size_text: ^3.0.0
+  # google_maps_flutter: ^2.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
